--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iconic-arith-lib",
-  "version": "0.1.2",
+  "version": "0.1.3-0",
   "description": "",
   "main": "./lib/index.js",
   "types": "./lib/index.d.ts",
